; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_real_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_real_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_add_real_path(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.strbuf, align 8
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %7 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @strbuf_realpath(%struct.strbuf* %5, i8* %12, i32 1)
  %14 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %15 = call i32 @strbuf_addbuf(%struct.strbuf* %14, %struct.strbuf* %5)
  %16 = call i32 @strbuf_release(%struct.strbuf* %5)
  br label %21

17:                                               ; preds = %2
  %18 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @strbuf_realpath(%struct.strbuf* %18, i8* %19, i32 1)
  br label %21

21:                                               ; preds = %17, %10
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_realpath(%struct.strbuf*, i8*, i32) #2

declare dso_local i32 @strbuf_addbuf(%struct.strbuf*, %struct.strbuf*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
